--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
         <script src="//code.angularjs.org/1.5.0/angular.min.js"></script>
         <script src="//code.angularjs.org/1.5.0/angular-messages.min.js"></script>
         <script src="//code.angularjs.org/1.5.0/angular-resource.min.js"></script>
+        <script src="//code.angularjs.org/1.5.0/angular-route.min.js"></script>
         <script src="app.js"></script>
     </head>
     <body>
@@ -30,7 +31,8 @@
 				</div>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+					<li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                    <li><a href="#/other"><i class="fa fa-home"></i> Other</a></li>
 				</ul>
 			</div>
 			</nav>
@@ -38,22 +40,7 @@
 
         <div class="container">
 
-			<div ng-controller="mainController">
-                {{ 2*4 }}
-                <h1>Hello world!</h1>
-               <form name="myForm">
-    <label>
-      Enter text:
-      <input type="text" ng-model="field" name="myField" required minlength="5" />
-    </label>
-    <div ng-messages="myForm.myField.$error" role="alert">
-      <div ng-message="required">You did not enter a field</div>
-      <div ng-message="minlength, maxlength">
-        Your email must be between 5 and 100 characters long
-      </div>
-    </div>
-  </form>
-            </div>
+			<div ng-view></div>
 
 		</div>
 
